# jargon

./: .gitignore  LICENSE  README.md  jargon_tool.py  pyproject.toml
data/: community.json  community_meta.json  jargon.json
