[project]
name = "jargon-file"
version = "0.1.0"
description = "Browse the Jargon File from your terminal — random entries, term lookups, colored output."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["lxml>=4.9"]

[project.urls]
Homepage = "https://github.com/rdubar/jargon"
Repository = "https://github.com/rdubar/jargon"
PyPI = "https://pypi.org/project/jargon-file/"

[project.scripts]
jargon = "jargon_tool:main"

[tool.uv]
index-url = "https://pypi.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["jargon_tool.py", "data/community.json", "data/community_meta.json"]

[tool.hatch.build.targets.sdist]
only-include = ["jargon_tool.py", "data/community.json", "data/community_meta.json", "README.md", "pyproject.toml"]
